# confi

./: README.md  main.py  pyproject.toml
examples/: examples.py
src/confi/: __init__.py  class_parser.py
tests/: test_defaults.py  test_modificators.py  test_types.py
