[project]
name = "confi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FoxRLY", email = "nevik0016@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "tox>=4.54.0",
]

[tool.tox]
env_list = [
    "3.13",
    "3.12",
    "3.11",
    "3.10",
]

[tool.tox.env_run_base]
description = "run the test suite with pytest"
deps = [
    "pytest>=8",
]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

